# aihero

./: .env.example  DEPLOYMENT_GUIDE.md  README.md  notebook.ipynb  pyproject.toml  run_streamlit.py  simple_test.py  test_app.py
.ipynb_checkpoints/: notebook-checkpoint.ipynb
app/: README.md  __init__.py  ingest.py  logs.py  main.py  search_agent.py  search_tools.py  streamlit_app.py
eval/: data-gen.py  evaluations.py  synthetic_questions.json
logs/: documentation_assistant_20260110_233016_e0e5ed.json  documentation_assistant_20260110_233021_cc752a.json  documentation_assistant_20260110_233027_0f48e9.json  documentation_assistant_20260111_090135_bb334b.json  documentation_assistant_20260111_090359_2c3a37.json  documentation_assistant_20260111_091402_3d78df.json  documentation_assistant_20260111_091429_774e11.json  documentation_assistant_20260111_091459_56ff0a.json  documentation_assistant_20260111_091521_b06c0d.json  documentation_assistant_20260111_091647_8af813.json  documentation_assistant_20260116_143834_86a36a.json  documentation_assistant_20260116_143943_0f290b.json  evaluation_log_20260111_121728.json  evaluation_log_20260111_121927.json  evaluation_log_20260111_130143.json  evaluation_log_20260111_190134.json  evaluation_log_20260112_204358.json  evaluation_log_20260114_221716.json  test_log_20251216_224120.json  test_log_20251216_224214.json
